--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -18,15 +19,19 @@
         android:theme="@style/Theme.PlaylistMaker"
         tools:targetApi="31">
         <activity
+            android:name=".LibraryActivity"
+            android:exported="false"
+            />
+        <activity
             android:name=".settings.ui.SettingsActivity"
             android:exported="false"
             />
         <activity
-            android:name=".player.ui.MediaActivity"
+            android:name=".player.ui.PlayerActivity"
             android:exported="false"
             />
         <activity
-            android:name=".search.ui.SearchActivity"
+            android:name=".search.ui.activity.SearchActivity"
             android:exported="false"
             />
         <activity
